# WALL-E-Replica

./: .gitignore  Dockerfile  LICENSE  README.md  install.sh  requirements.txt  wall-e.service
Code/PythonCode/: test-ciblage.py
Code/PythonCode/Essai-OpenCV-HOG/: wall_e.py
Code/PythonWebServer - Flask/: config.yaml  webServer.py
Code/PythonWebServer - Flask/static/: base.css  base.js
Code/PythonWebServer - Flask/templates/: index.html
Code/WebServer/: base.css  index.html
Code/essais/: test-ciblage.py
Code/essais/MediaPipe/: wall_e.py
Code/essais/Moteurs-DC/: DCmotors.py
Code/essais/YOLO/: wall_e.py
Code/libraries/: PCA9685.py  ST7789.py  battery.py  camera.py  light.py  motors.py  screen.py  servomotors.py  sounds.py  ultrasonic_sensor.py
Code/libraries/hardwareLibraries/: PCA9685.py
Code/webServer/: config.yaml  webServer.py
Code/webServer/static/: base.css  base.js
Code/webServer/templates/: index.html
Datasheets/Motors Driver HAT/Example/: PCA9685.py  main.py
Tests/battery/: ADS1x15.py  battery.py
Tests/light/: light.py
Tests/motors/: motors.py
Tests/screen/: ST7789.py  screen.py
Tests/servomotors/: PCA9685.py  servomotors.py
Tests/ultrasonic_sensor/: ultrasonic_sensor.py
src/wall_e_core/: package.xml  setup.cfg  setup.py
src/wall_e_core/config/: params.yaml
src/wall_e_core/launch/: wall_e_launch.py
src/wall_e_core/test/: test_camera.py  test_screen.py  test_soundbox.py
src/wall_e_core/wall_e_core/: automatic_mode_node.py  battery_node.py  camera_node.py  camera_node_picamera.py  lights_node.py  motors_node.py  screen_node.py  servomotors_node.py  soundbox_node.py  test_camera_ffmpeg.py  test_camera_picamera.py  ultrasonic_sensors_node.py  web_server_node.py
src/wall_e_core/wall_e_core/templates/: index.html
src/wall_e_msg_srv/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/wall_e_msg_srv/msg/: Distances.msg
src/wall_e_msg_srv/srv/: GetAutomaticMode.srv  Move.srv  MoveArm.srv  MoveEye.srv  MoveHead.srv  PlaySound.srv  SetLightIntensity.srv  SetVolume.srv  SwitchAI.srv  SwitchAutomaticMode.srv
web_server/: index.html
web_server/css/: style.css
web_server/js/: app.js
(+2 files in other folders)
